--- a/AOC2024.md
+++ b/AOC2024.md
@@ -85,6 +85,9 @@ Useful commands:
 
 ### DAY FOUR ###
 
+Oof... Well that was something! It took me a bit to understand what I should do but it clicked! ANd I got to the finish line after all! It was mainly about MITRE and AtomicTests with some simple example of how would a Sigma rule look like.
+[THIS](https://attack.mitre.org/) is useful... very useful indeed! Otherwise poking and prodding around to find what would work and such
+
 ### DAY FIVE ###
  
 ### DAY SIX ###
