--- a/AOC2024.md
+++ b/AOC2024.md
@@ -91,7 +91,7 @@ Oof... Well that was something! It took me a bit to understand what I should do 
 ### DAY FIVE ###
 
 This one was really fun, straightforward and pretty 'hands-on'. Teaching how to use Burp Suite to intercept, modify and repeat the requests to leverage bugs and inject payloads or run commands on compromised machine. A good practice is to use `libxml_disable_entity_loader(true)`  before parsing any XML in code and also it's good to sanitise user input, no matter what. Other than just a fun little quick Burp Suite tutorial it wasn't anything specially difficult.
-Burp Suite can be found [HERE](https://portswigger.net/burp/communitydownload) and community edition should be free.
+Burp Suite can be found [HERE](https://portswigger.net/burp/communitydownload)
 
 ### DAY SIX ###
 
