--- a/AOC2024.md
+++ b/AOC2024.md
@@ -95,6 +95,8 @@ Burp Suite can be found [HERE](https://portswigger.net/burp/communitydownload)
 
 ### DAY SIX ###
 
+In this one we played with sandbox to try Yara and FLOSS. Yara is great for detecting malicious looking code that tries to run and FLOSS is like `strings` but even more targeted for malware. Very simple day, quick analysis and that's that.
+
 ### DAY SEVEN ###
 
 ### DAY EIGHT ###
