--- a/AOC2024.md
+++ b/AOC2024.md
@@ -99,6 +99,12 @@ In this one we played with sandbox to try Yara and FLOSS. Yara is great for dete
 
 ### DAY SEVEN ###
 
+This day greeted me with a nice tool, JQ and it's QL! It's very useful for parsing JSON and with a pipe and tables we can get the output in a very readable format, straight in the terminal. Othwerwise day was full of JQ syntax and log-reading to get the information we're after.
+
+For future reference:
+
+`jq -r '["Event_Time", "Event_Name", "User_Name", "Bucket_Name", "Key", "Source_IP"],(.Records[] | select(.eventSource == "s3.amazonaws.com" and .requestParameters.bucketName=="wareville-care4wares") | [.eventTime, .eventName, .userIdentity.userName // "N/A",.requestParameters.bucketName // "N/A", .requestParameters.key // "N/A", .sourceIPAddress // "N/A"]) | @tsv' cloudtrail_log.json | column -t -s $'\t'`
+
 ### DAY EIGHT ###
 
 ### DAY NINE ###
