--- a/AOC2024.md
+++ b/AOC2024.md
@@ -155,6 +155,8 @@ $thandle = [CrtThread]::CreateThread(0, 0, $addr, 0, 0, 0)
 
 ### DAY NINE ###
 
+Risk assesment. Easy day, just a bit of thinking and it's done. Not much to say, risk assessment is just that. Couple questions and answers. Depending on those we can identify risks and maybe mitigate them. Pobody's nerfect!
+
 ### DAY TEN ###
 
 ### DAY ELEVEN ###
