--- a/AOC2024.md
+++ b/AOC2024.md
@@ -196,11 +196,19 @@ Oooh! WiFi cracking! Today we got a quick and simple tutorial how to get the pas
 
 ### DAY TWELVE ###
 
+We're half way there and today was another BurpSuite-focused day but this time with repeater to invoke race condition. Not much to write about it, really.
+
 ### DAY THIRTEEN ###
+
+Day thirteen... Unlucky to WebSockets! Another BurpSuite day! It's nothing bad, don't get me wrong! It's fun to learn new ways of using a new tool. And so we learned that we can intercept the WebSocket traffic and modify it before forwarding it with a high possibility of mischief.
 
 ### DAY FOURTEEN ###
 
+This one was kind of all over the place. It's supposed to be about certificates and yet has us set up ficticious MiTM setup, adding to `/etc/hosts/` and using some prepared script (I was rushing and didn't have time to tinker with code, might re-visit and check it) to intercept data using... <drumroll> BurpSuite! And that's because we set up proxy in there and were able to capture traffic. I wonder why not use WireShark for that. But it's good to know BurpSuite has that kind of capabilities too.
+
 ### DAY FIFTEEN ###
+
+This one was about ActiveDirectory and group policies and whatnot. Had to go through logs and answer some questions, didn't learn too much, really, but that's just me. Some PowerShell tricks were presented to help with investigating and whatnot.
 
 ### DAY SIXTEEN ###
 
